// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion komponent Sender videre html atributter 1`] = `
<Accordion
  data-testid="testidparent123"
  processList={true}
>
  <div
    className=

        {
          background-color: #ffffff;
          margin-bottom: 20px;
          position: relative;
        }
        & hr {
          border-width: 1px;
          border: solid;
          color: #b2b2b2;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
        }
    data-testid="testidparent123"
  >
    <Grid
      padding="0px"
    >
      <div
        className=
            
            {
              box-sizing: border-box;
              padding-bottom: 0px;
              padding-left: 0px;
              padding-right: 0px;
              padding-top: 0px;
              zoom: 1;
            }
            &::before {
              content: "";
              display: table;
              line-height: 0;
            }
            &::after {
              clear: both;
              content: "";
              display: table;
              line-height: 0;
            }
        dir="ltr"
      >
        <AccordionItem
          data-testid="testid123"
          key=".$.0"
          processList={true}
          stepId="step-1-1"
          stepNumber={1}
          totalSteps={1}
        >
          <div
            className=

                {
                  position: relative;
                }
            data-testid="testid123"
            key="1"
          >
            <GridRow
              rowSpacing="0px"
            >
              <div
                className=
                    
                    {
                      box-sizing: border-box;
                      margin-bottom: 0px;
                      margin-left: 0;
                      margin-right: 0;
                      margin-top: 0px;
                      zoom: 1;
                    }
                    &::before {
                      content: "";
                      display: table;
                      line-height: 0;
                    }
                    &::after {
                      clear: both;
                      content: "";
                      display: table;
                      line-height: 0;
                    }
              >
                <GridCol
                  noSpacing={true}
                >
                  <div
                    className=
                        
                        {
                          box-sizing: border-box;
                          min-height: 1px;
                          padding-left: false;
                          padding-right: false;
                          position: relative;
                          width: 100%;
                        }
                        & $grid {
                          padding-bottom: 0;
                          padding-left: 0;
                          padding-right: 0;
                          padding-top: 0;
                        }
                        [dir='ltr'] & {
                          float: left;
                          left: NaN%;
                          margin-bottom: 0;
                          margin-left: 0;
                          margin-right: 0;
                          margin-top: 0;
                          right: NaN%;
                        }
                        @media (min-width: 320px){[dir='ltr'] & {
                          left: NaN%;
                          right: NaN%;
                          width: NaN%;
                        }
                        @media (min-width: 480px){[dir='ltr'] & {
                          left: NaN%;
                          right: NaN%;
                          width: NaN%;
                        }
                        @media (min-width: 640px){[dir='ltr'] & {
                          left: NaN%;
                          right: NaN%;
                          width: NaN%;
                        }
                        @media (min-width: 1024px){[dir='ltr'] & {
                          left: NaN%;
                          right: NaN%;
                          width: NaN%;
                        }
                        @media (min-width: 1366px){[dir='ltr'] & {
                          left: NaN%;
                          right: NaN%;
                          width: NaN%;
                        }
                        [dir='rtl'] & {
                          float: right;
                          left: NaN%;
                          right: NaN%;
                        }
                        @media (min-width: 320px){[dir='rtl'] & {
                          left: NaN%;
                          right: NaN%;
                          width: NaN%;
                        }
                        @media (min-width: 480px){[dir='rtl'] & {
                          left: NaN%;
                          right: NaN%;
                          width: NaN%;
                        }
                        @media (min-width: 640px){[dir='rtl'] & {
                          left: NaN%;
                          right: NaN%;
                          width: NaN%;
                        }
                        @media (min-width: 1024px){[dir='rtl'] & {
                          left: NaN%;
                          right: NaN%;
                          width: NaN%;
                        }
                        @media (min-width: 1366px){[dir='rtl'] & {
                          left: NaN%;
                          right: NaN%;
                          width: NaN%;
                        }
                        @media (min-width: 1920px){& {
                          width: NaN%;
                        }
                  >
                    <GridRow
                      rowSpacing="0px"
                    >
                      <div
                        className=
                            
                            {
                              box-sizing: border-box;
                              margin-bottom: 0px;
                              margin-left: 0;
                              margin-right: 0;
                              margin-top: 0px;
                              zoom: 1;
                            }
                            &::before {
                              content: "";
                              display: table;
                              line-height: 0;
                            }
                            &::after {
                              clear: both;
                              content: "";
                              display: table;
                              line-height: 0;
                            }
                      >
                        <GridCol
                          md={1}
                          noSpacing={true}
                          sm={2}
                          xl={1}
                        >
                          <div
                            className=
                                
                                {
                                  box-sizing: border-box;
                                  min-height: 1px;
                                  padding-left: false;
                                  padding-right: false;
                                  position: relative;
                                  width: 100%;
                                }
                                & $grid {
                                  padding-bottom: 0;
                                  padding-left: 0;
                                  padding-right: 0;
                                  padding-top: 0;
                                }
                                [dir='ltr'] & {
                                  float: left;
                                  left: NaN%;
                                  margin-bottom: 0;
                                  margin-left: 0;
                                  margin-right: 0;
                                  margin-top: 0;
                                  right: NaN%;
                                }
                                @media (min-width: 320px){[dir='ltr'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: 16.666666666666668%;
                                }
                                @media (min-width: 480px){[dir='ltr'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: 8.333333333333334%;
                                }
                                @media (min-width: 640px){[dir='ltr'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: NaN%;
                                }
                                @media (min-width: 1024px){[dir='ltr'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: 8.333333333333334%;
                                }
                                @media (min-width: 1366px){[dir='ltr'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: NaN%;
                                }
                                [dir='rtl'] & {
                                  float: right;
                                  left: NaN%;
                                  right: NaN%;
                                }
                                @media (min-width: 320px){[dir='rtl'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: 16.666666666666668%;
                                }
                                @media (min-width: 480px){[dir='rtl'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: 8.333333333333334%;
                                }
                                @media (min-width: 640px){[dir='rtl'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: NaN%;
                                }
                                @media (min-width: 1024px){[dir='rtl'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: 8.333333333333334%;
                                }
                                @media (min-width: 1366px){[dir='rtl'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: NaN%;
                                }
                                @media (min-width: 1920px){& {
                                  width: NaN%;
                                }
                          >
                            <div
                              className=

                                  {
                                    align-items: center;
                                    background-color: #ffffff;
                                    border-color: #000000;
                                    border-radius: 50%;
                                    border-width: 2px;
                                    border: solid;
                                    display: flex;
                                    font-size: 1.125rem;
                                    font-weight: 700;
                                    height: 30px;
                                    justify-content: center;
                                    margin-top: 18px;
                                    width: 30px;
                                    z-index: 10;
                                  }
                                  @media (max-width: 639px){& {
                                    font-size: 1rem;
                                    height: 24px;
                                    width: 24px;
                                  }
                            >
                              <span
                                aria-label="Steg 1"
                                id="StepIdstep-1-1"
                              >
                                1
                              </span>
                            </div>
                          </div>
                        </GridCol>
                        <GridCol
                          md={10}
                          noSpacing={true}
                          sm={9}
                          xl={11}
                        >
                          <div
                            className=
                                
                                {
                                  box-sizing: border-box;
                                  min-height: 1px;
                                  padding-left: false;
                                  padding-right: false;
                                  position: relative;
                                  width: 100%;
                                }
                                & $grid {
                                  padding-bottom: 0;
                                  padding-left: 0;
                                  padding-right: 0;
                                  padding-top: 0;
                                }
                                [dir='ltr'] & {
                                  float: left;
                                  left: NaN%;
                                  margin-bottom: 0;
                                  margin-left: 0;
                                  margin-right: 0;
                                  margin-top: 0;
                                  right: NaN%;
                                }
                                @media (min-width: 320px){[dir='ltr'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: 75%;
                                }
                                @media (min-width: 480px){[dir='ltr'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: 83.33333333333334%;
                                }
                                @media (min-width: 640px){[dir='ltr'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: NaN%;
                                }
                                @media (min-width: 1024px){[dir='ltr'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: 91.66666666666667%;
                                }
                                @media (min-width: 1366px){[dir='ltr'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: NaN%;
                                }
                                [dir='rtl'] & {
                                  float: right;
                                  left: NaN%;
                                  right: NaN%;
                                }
                                @media (min-width: 320px){[dir='rtl'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: 75%;
                                }
                                @media (min-width: 480px){[dir='rtl'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: 83.33333333333334%;
                                }
                                @media (min-width: 640px){[dir='rtl'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: NaN%;
                                }
                                @media (min-width: 1024px){[dir='rtl'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: 91.66666666666667%;
                                }
                                @media (min-width: 1366px){[dir='rtl'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: NaN%;
                                }
                                @media (min-width: 1920px){& {
                                  width: NaN%;
                                }
                          >
                            <hr />
                            <ToggleContent
                              isContentOpen={false}
                              onClick={[Function]}
                              processList={true}
                              stepId="step-1-1"
                              styles={
                                Object {
                                  "accordion": 

                                    {
                                      background-color: #ffffff;
                                      margin-bottom: 20px;
                                      position: relative;
                                    }
                                    & hr {
                                      border-width: 1px;
                                      border: solid;
                                      color: #b2b2b2;
                                      margin-bottom: 0px;
                                      margin-left: 0px;
                                      margin-right: 0px;
                                      margin-top: 0px;
                                    },
                                  "containerStep": 

                                    {
                                      margin-bottom: 0;
                                      margin-left: auto;
                                      margin-right: auto;
                                      margin-top: 0;
                                    },
                                  "content": 

                                    {
                                      background-color: #ffffff;
                                      padding-bottom: 15px;
                                      padding-left: 10px;
                                      padding-right: 0;
                                      padding-top: 0px;
                                    }
                                    &:focus {
                                      background: #e2eaf7;
                                    },
                                  "heading": 

                                    {
                                      font-size: 1.25rem;
                                      margin-bottom: 0;
                                      margin-left: 0;
                                      margin-right: 0;
                                      margin-top: 0;
                                    },
                                  "stepLine": 

                                    {
                                      background-color: #b2b2b2;
                                      display: block;
                                      height: 100%;
                                      left: 16px;
                                      position: absolute;
                                      top: 50px;
                                      width: 2px;
                                    }
                                    @media (max-width: 639px){& {
                                      left: 14px;
                                      top: 40px;
                                    },
                                  "stepNumber": 

                                    {
                                      align-items: center;
                                      background-color: #ffffff;
                                      border-color: #000000;
                                      border-radius: 50%;
                                      border-width: 2px;
                                      border: solid;
                                      display: flex;
                                      font-size: 1.125rem;
                                      font-weight: 700;
                                      height: 30px;
                                      justify-content: center;
                                      margin-top: 18px;
                                      width: 30px;
                                      z-index: 10;
                                    }
                                    @media (max-width: 639px){& {
                                      font-size: 1rem;
                                      height: 24px;
                                      width: 24px;
                                    },
                                  "subComponentStyles": Object {},
                                  "subtitle": 

                                    {
                                      border: none;
                                      color: #1a1a1a;
                                      display: block;
                                      font-size: 1.125rem;
                                      font-weight: 400;
                                      margin-bottom: 0px;
                                      margin-left: 0px;
                                      margin-right: 0px;
                                      margin-top: 0px;
                                      padding-bottom: 0;
                                      padding-left: 0;
                                      padding-right: 5px;
                                      padding-top: 8px;
                                      text-align: left;
                                      width: 100%;
                                    },
                                  "toggleButton": 

                                    {
                                      background: none;
                                      border: none;
                                      color: #1362ae;
                                      cursor: pointer;
                                      font-size: 1rem;
                                      font-weight: 700;
                                      margin-bottom: 0px;
                                      margin-top: 0px;
                                      padding-bottom: 16px;
                                      padding-left: 8px;
                                      padding-right: 16px;
                                      padding-top: 16px;
                                      position: relative;
                                      text-align: left;
                                      width: 100%;
                                    }
                                    @media (min-width: 640px){& {
                                      font-size: 1.25rem;
                                    }
                                    &:hover {
                                      background: #cde1f9;
                                    }
                                    &:focus {
                                      background: #cde1f9;
                                      outline: none;
                                    }
                                    & h1 {
                                      font-size: 1.25rem;
                                      margin-bottom: 0;
                                      margin-left: 0;
                                      margin-right: 0;
                                      margin-top: 0;
                                    }
                                    & h2 {
                                      font-size: 1.25rem;
                                      margin-bottom: 0;
                                      margin-left: 0;
                                      margin-right: 0;
                                      margin-top: 0;
                                    }
                                    & h3 {
                                      font-size: 1.25rem;
                                      margin-bottom: 0;
                                      margin-left: 0;
                                      margin-right: 0;
                                      margin-top: 0;
                                    }
                                    & h4 {
                                      font-size: 1.25rem;
                                      margin-bottom: 0;
                                      margin-left: 0;
                                      margin-right: 0;
                                      margin-top: 0;
                                    }
                                    & h5 {
                                      font-size: 1.25rem;
                                      margin-bottom: 0;
                                      margin-left: 0;
                                      margin-right: 0;
                                      margin-top: 0;
                                    }
                                    & h6 {
                                      font-size: 1.25rem;
                                      margin-bottom: 0;
                                      margin-left: 0;
                                      margin-right: 0;
                                      margin-top: 0;
                                    }
                                    & i {
                                      align-self: flex-start;
                                      font-size: 1.5rem;
                                      margin-top: -2px;
                                      transition: .2s;
                                    }
                                    @media (min-width: 640px){& i {
                                      font-size: 2rem;
                                    },
                                  "toggleButtonContent": 

                                    {
                                      align-items: center;
                                      display: flex;
                                      flex-direction: row;
                                      justify-content: space-between;
                                    },
                                  "toggleButtonOpen": 

                                    & i {
                                      transform: rotate(180deg);
                                    },
                                  "wrapperStep": 

                                    {
                                      position: relative;
                                    },
                                }
                              }
                            />
                            <div
                              className=

                                  {
                                    background-color: #ffffff;
                                    padding-bottom: 15px;
                                    padding-left: 10px;
                                    padding-right: 0;
                                    padding-top: 0px;
                                  }
                                  &:focus {
                                    background: #e2eaf7;
                                  }
                              id="step-1-1"
                            >
                              <p>
                                Her vises innhold
                              </p>
                            </div>
                            <hr />
                          </div>
                        </GridCol>
                      </div>
                    </GridRow>
                  </div>
                </GridCol>
              </div>
            </GridRow>
          </div>
        </AccordionItem>
      </div>
    </Grid>
  </div>
</Accordion>
`;

exports[`Accordion komponent matcher snapshot 1`] = `
<Accordion>
  <div
    className=

        {
          background-color: #ffffff;
          margin-bottom: 20px;
          position: relative;
        }
        & hr {
          border-width: 1px;
          border: solid;
          color: #b2b2b2;
          margin-bottom: 0px;
          margin-left: 0px;
          margin-right: 0px;
          margin-top: 0px;
        }
  >
    <Grid
      padding="0px"
    >
      <div
        className=
            
            {
              box-sizing: border-box;
              padding-bottom: 0px;
              padding-left: 0px;
              padding-right: 0px;
              padding-top: 0px;
              zoom: 1;
            }
            &::before {
              content: "";
              display: table;
              line-height: 0;
            }
            &::after {
              clear: both;
              content: "";
              display: table;
              line-height: 0;
            }
        dir="ltr"
      >
        <AccordionItem
          key=".$.0"
          stepNumber={1}
          totalSteps={1}
        >
          <div
            className=

                {
                  position: relative;
                }
            key="1"
          >
            <GridRow
              rowSpacing="0px"
            >
              <div
                className=
                    
                    {
                      box-sizing: border-box;
                      margin-bottom: 0px;
                      margin-left: 0;
                      margin-right: 0;
                      margin-top: 0px;
                      zoom: 1;
                    }
                    &::before {
                      content: "";
                      display: table;
                      line-height: 0;
                    }
                    &::after {
                      clear: both;
                      content: "";
                      display: table;
                      line-height: 0;
                    }
              >
                <GridCol
                  noSpacing={true}
                >
                  <div
                    className=
                        
                        {
                          box-sizing: border-box;
                          min-height: 1px;
                          padding-left: false;
                          padding-right: false;
                          position: relative;
                          width: 100%;
                        }
                        & $grid {
                          padding-bottom: 0;
                          padding-left: 0;
                          padding-right: 0;
                          padding-top: 0;
                        }
                        [dir='ltr'] & {
                          float: left;
                          left: NaN%;
                          margin-bottom: 0;
                          margin-left: 0;
                          margin-right: 0;
                          margin-top: 0;
                          right: NaN%;
                        }
                        @media (min-width: 320px){[dir='ltr'] & {
                          left: NaN%;
                          right: NaN%;
                          width: NaN%;
                        }
                        @media (min-width: 480px){[dir='ltr'] & {
                          left: NaN%;
                          right: NaN%;
                          width: NaN%;
                        }
                        @media (min-width: 640px){[dir='ltr'] & {
                          left: NaN%;
                          right: NaN%;
                          width: NaN%;
                        }
                        @media (min-width: 1024px){[dir='ltr'] & {
                          left: NaN%;
                          right: NaN%;
                          width: NaN%;
                        }
                        @media (min-width: 1366px){[dir='ltr'] & {
                          left: NaN%;
                          right: NaN%;
                          width: NaN%;
                        }
                        [dir='rtl'] & {
                          float: right;
                          left: NaN%;
                          right: NaN%;
                        }
                        @media (min-width: 320px){[dir='rtl'] & {
                          left: NaN%;
                          right: NaN%;
                          width: NaN%;
                        }
                        @media (min-width: 480px){[dir='rtl'] & {
                          left: NaN%;
                          right: NaN%;
                          width: NaN%;
                        }
                        @media (min-width: 640px){[dir='rtl'] & {
                          left: NaN%;
                          right: NaN%;
                          width: NaN%;
                        }
                        @media (min-width: 1024px){[dir='rtl'] & {
                          left: NaN%;
                          right: NaN%;
                          width: NaN%;
                        }
                        @media (min-width: 1366px){[dir='rtl'] & {
                          left: NaN%;
                          right: NaN%;
                          width: NaN%;
                        }
                        @media (min-width: 1920px){& {
                          width: NaN%;
                        }
                  >
                    <GridRow
                      rowSpacing="0px"
                    >
                      <div
                        className=
                            
                            {
                              box-sizing: border-box;
                              margin-bottom: 0px;
                              margin-left: 0;
                              margin-right: 0;
                              margin-top: 0px;
                              zoom: 1;
                            }
                            &::before {
                              content: "";
                              display: table;
                              line-height: 0;
                            }
                            &::after {
                              clear: both;
                              content: "";
                              display: table;
                              line-height: 0;
                            }
                      >
                        <GridCol
                          md={12}
                          noSpacing={true}
                          sm={12}
                          xl={12}
                        >
                          <div
                            className=
                                
                                {
                                  box-sizing: border-box;
                                  min-height: 1px;
                                  padding-left: false;
                                  padding-right: false;
                                  position: relative;
                                  width: 100%;
                                }
                                & $grid {
                                  padding-bottom: 0;
                                  padding-left: 0;
                                  padding-right: 0;
                                  padding-top: 0;
                                }
                                [dir='ltr'] & {
                                  float: left;
                                  left: NaN%;
                                  margin-bottom: 0;
                                  margin-left: 0;
                                  margin-right: 0;
                                  margin-top: 0;
                                  right: NaN%;
                                }
                                @media (min-width: 320px){[dir='ltr'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: 100%;
                                }
                                @media (min-width: 480px){[dir='ltr'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: 100%;
                                }
                                @media (min-width: 640px){[dir='ltr'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: NaN%;
                                }
                                @media (min-width: 1024px){[dir='ltr'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: 100%;
                                }
                                @media (min-width: 1366px){[dir='ltr'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: NaN%;
                                }
                                [dir='rtl'] & {
                                  float: right;
                                  left: NaN%;
                                  right: NaN%;
                                }
                                @media (min-width: 320px){[dir='rtl'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: 100%;
                                }
                                @media (min-width: 480px){[dir='rtl'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: 100%;
                                }
                                @media (min-width: 640px){[dir='rtl'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: NaN%;
                                }
                                @media (min-width: 1024px){[dir='rtl'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: 100%;
                                }
                                @media (min-width: 1366px){[dir='rtl'] & {
                                  left: NaN%;
                                  right: NaN%;
                                  width: NaN%;
                                }
                                @media (min-width: 1920px){& {
                                  width: NaN%;
                                }
                          >
                            <hr />
                            <ToggleContent
                              isContentOpen={false}
                              onClick={[Function]}
                              styles={
                                Object {
                                  "accordion": 

                                    {
                                      background-color: #ffffff;
                                      margin-bottom: 20px;
                                      position: relative;
                                    }
                                    & hr {
                                      border-width: 1px;
                                      border: solid;
                                      color: #b2b2b2;
                                      margin-bottom: 0px;
                                      margin-left: 0px;
                                      margin-right: 0px;
                                      margin-top: 0px;
                                    },
                                  "containerStep": 

                                    {
                                      margin-bottom: 0;
                                      margin-left: auto;
                                      margin-right: auto;
                                      margin-top: 0;
                                    },
                                  "content": 

                                    {
                                      background-color: #ffffff;
                                      padding-bottom: 15px;
                                      padding-left: 10px;
                                      padding-right: 0;
                                      padding-top: 0px;
                                    }
                                    &:focus {
                                      background: #e2eaf7;
                                    },
                                  "heading": 

                                    {
                                      font-size: 1.25rem;
                                      margin-bottom: 0;
                                      margin-left: 0;
                                      margin-right: 0;
                                      margin-top: 0;
                                    },
                                  "stepLine": 

                                    {
                                      background-color: #b2b2b2;
                                      display: block;
                                      height: 100%;
                                      left: 16px;
                                      position: absolute;
                                      top: 50px;
                                      width: 2px;
                                    }
                                    @media (max-width: 639px){& {
                                      left: 14px;
                                      top: 40px;
                                    },
                                  "stepNumber": 

                                    {
                                      align-items: center;
                                      background-color: #ffffff;
                                      border-color: #000000;
                                      border-radius: 50%;
                                      border-width: 2px;
                                      border: solid;
                                      display: flex;
                                      font-size: 1.125rem;
                                      font-weight: 700;
                                      height: 30px;
                                      justify-content: center;
                                      margin-top: 18px;
                                      width: 30px;
                                      z-index: 10;
                                    }
                                    @media (max-width: 639px){& {
                                      font-size: 1rem;
                                      height: 24px;
                                      width: 24px;
                                    },
                                  "subComponentStyles": Object {},
                                  "subtitle": 

                                    {
                                      border: none;
                                      color: #1a1a1a;
                                      display: block;
                                      font-size: 1.125rem;
                                      font-weight: 400;
                                      margin-bottom: 0px;
                                      margin-left: 0px;
                                      margin-right: 0px;
                                      margin-top: 0px;
                                      padding-bottom: 0;
                                      padding-left: 0;
                                      padding-right: 5px;
                                      padding-top: 8px;
                                      text-align: left;
                                      width: 100%;
                                    },
                                  "toggleButton": 

                                    {
                                      background: none;
                                      border: none;
                                      color: #1362ae;
                                      cursor: pointer;
                                      font-size: 1rem;
                                      font-weight: 700;
                                      margin-bottom: 0px;
                                      margin-top: 0px;
                                      padding-bottom: 16px;
                                      padding-left: 8px;
                                      padding-right: 16px;
                                      padding-top: 16px;
                                      position: relative;
                                      text-align: left;
                                      width: 100%;
                                    }
                                    @media (min-width: 640px){& {
                                      font-size: 1.25rem;
                                    }
                                    &:hover {
                                      background: #cde1f9;
                                    }
                                    &:focus {
                                      background: #cde1f9;
                                      outline: none;
                                    }
                                    & h1 {
                                      font-size: 1.25rem;
                                      margin-bottom: 0;
                                      margin-left: 0;
                                      margin-right: 0;
                                      margin-top: 0;
                                    }
                                    & h2 {
                                      font-size: 1.25rem;
                                      margin-bottom: 0;
                                      margin-left: 0;
                                      margin-right: 0;
                                      margin-top: 0;
                                    }
                                    & h3 {
                                      font-size: 1.25rem;
                                      margin-bottom: 0;
                                      margin-left: 0;
                                      margin-right: 0;
                                      margin-top: 0;
                                    }
                                    & h4 {
                                      font-size: 1.25rem;
                                      margin-bottom: 0;
                                      margin-left: 0;
                                      margin-right: 0;
                                      margin-top: 0;
                                    }
                                    & h5 {
                                      font-size: 1.25rem;
                                      margin-bottom: 0;
                                      margin-left: 0;
                                      margin-right: 0;
                                      margin-top: 0;
                                    }
                                    & h6 {
                                      font-size: 1.25rem;
                                      margin-bottom: 0;
                                      margin-left: 0;
                                      margin-right: 0;
                                      margin-top: 0;
                                    }
                                    & i {
                                      align-self: flex-start;
                                      font-size: 1.5rem;
                                      margin-top: -2px;
                                      transition: .2s;
                                    }
                                    @media (min-width: 640px){& i {
                                      font-size: 2rem;
                                    },
                                  "toggleButtonContent": 

                                    {
                                      align-items: center;
                                      display: flex;
                                      flex-direction: row;
                                      justify-content: space-between;
                                    },
                                  "toggleButtonOpen": 

                                    & i {
                                      transform: rotate(180deg);
                                    },
                                  "wrapperStep": 

                                    {
                                      position: relative;
                                    },
                                }
                              }
                            />
                            <div
                              className=

                                  {
                                    background-color: #ffffff;
                                    padding-bottom: 15px;
                                    padding-left: 10px;
                                    padding-right: 0;
                                    padding-top: 0px;
                                  }
                                  &:focus {
                                    background: #e2eaf7;
                                  }
                            >
                              <p>
                                Her vises innhold
                              </p>
                            </div>
                            <hr />
                          </div>
                        </GridCol>
                      </div>
                    </GridRow>
                  </div>
                </GridCol>
              </div>
            </GridRow>
          </div>
        </AccordionItem>
      </div>
    </Grid>
  </div>
</Accordion>
`;
